@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="8.5.0~core2" name="jQuery-File-Upload" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="8.5.0~core3" name="jQuery-File-Upload" execmode="web">
 	<requires>
-		<require name="core" type="component" version="3.1.0" operation="ge"/>
+		<require name="core" type="component" version="3.2.0" operation="ge"/>
 		<require name="JQuery" type="library" version="1.6" operation="ge"/>
 		<require name="jqueryui" type="library" version="1.8" operation="ge"/>
 	</requires>
@@ -17,6 +17,7 @@
 		<upgrade from="8.1.0~core2" to="8.1.0~core3"/>
 		<upgrade from="8.1.0~core3" to="8.5.0~core1"/>
 		<upgrade from="8.5.0~core1" to="8.5.0~core2"/>
+		<upgrade from="8.5.0~core2" to="8.5.0~core3"/>
 	</upgrades>
 	<description>
 		File Upload widget with multiple file selection, drag and drop support, progress bar, validation and preview images,
@@ -28,12 +29,12 @@
 		<formelement name="multifile" class="MultiFileInput"/>
 	</forms>
 	<files>
-		<file filename="CHANGELOG" md5="5d5530d0bbc294e42d62ea0b2c3872f7"/>
+		<file filename="CHANGELOG" md5="0908d09db1e439cbf39cdaed86c4e08f"/>
 		<file filename="README.md" md5="cb22a03a2f5fc8aaf6dcf5a9c2180a66"/>
 		<file filename="classes/MultiFileInput.class.php" md5="587c5d2fde3f3222af605245bca53e50">
 			<class name="MultiFileInput"/>
 		</file>
-		<file filename="controllers/JQueryFileUploadController.php" md5="23c66351a656e3fcf4ce749b3630f5b9">
+		<file filename="controllers/JQueryFileUploadController.php" md5="8b68c56d53a6496708b22f38b2d37bd1">
 			<controller name="JQueryFileUploadController"/>
 		</file>
 	</files>
